--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,6 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(229, 84, 115, 0.1);
-  /* padding: 0 180px; */
 }
 
 .banner-info {
@@ -44,4 +43,73 @@
 
 .banner-image {
   width: 550px;
+}
+
+/* Our featured section start */
+
+/* common section title and description  */
+.section-title {
+  color: #272727;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 800;
+  margin-top: 120px;
+  margin-bottom: 20px;
+}
+
+.section-description {
+  color: rgba(39, 39, 39, 0.6);
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  padding: 0 20%;
+}
+
+/* Featured flowers styles */
+.featured-flowers {
+  display: flex;
+  justify-content: space-around;
+  padding: 0 20%;
+  align-items: center;
+  gap: 30px;
+  margin-top: 60px;
+}
+
+.img-flower1 {
+  width: 210px;
+  height: 328px;
+  padding: 50px;
+  padding-bottom: 0;
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(167, 33, 98, 0.15);
+}
+
+.img-flower2 {
+  width: 210px;
+  height: 328px;
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(5, 151, 160, 0.15);
+  padding: 50px;
+  padding-bottom: 0;
+}
+
+.img-flower3 {
+  width: 210px;
+  height: 328px;
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(71, 125, 17, 0.15);
+  padding: 50px;
+  padding-bottom: 0;
+}
+
+.f-text {
+  color: #272727;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 35px;
+  text-decoration-line: underline;
 }
