--- a/assets/style.css
+++ b/assets/style.css
@@ -69,10 +69,12 @@
 /* Featured flowers styles */
 .featured-flowers {
   display: flex;
-  justify-content: space-around;
-  padding: 0 20%;
+  justify-content: center;
   align-items: center;
+
   gap: 30px;
+  max-width: 1180px;
+  margin: 0 auto;
   margin-top: 60px;
 }
 
@@ -112,4 +114,32 @@
   font-weight: 700;
   line-height: 35px;
   text-decoration-line: underline;
+}
+
+/* Benefit section start */
+.benefits {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 50px 0px;
+  border-radius: 8px;
+  background: rgba(39, 39, 39, 0.05);
+  margin-top: 100px;
+}
+
+.benefit-img {
+  width: 88px;
+  height: 88px;
+  margin-left: 30%;
+}
+.benefit-text {
+  color: rgba(39, 39, 39, 0.8);
+  text-align: center;
+  font-family: Lato;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  margin-top: 20px;
 }
