--- a/assets/style.css
+++ b/assets/style.css
@@ -170,6 +170,24 @@
 /* .text-center {
   margin-left: 35%;
 } */
-.singup {
+.sign-up {
   text-align: center;
 }
+/* Instagram Section Start  */
+.instagram {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+.insta-images {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 10px;
+  margin-top: 50px;
+  padding: 0 40px;
+}
+.insta-image {
+  width: 270px;
+}
+
+/* Subscribe section start */
