--- a/assets/style.css
+++ b/assets/style.css
@@ -191,3 +191,46 @@
 }
 
 /* Subscribe section start */
+.subscribe {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 50px 0px;
+  border-radius: 8px;
+  background: rgba(39, 39, 39, 0.05);
+  margin-top: 100px;
+  background-image: url("./images/Rectangle\ 9.png");
+}
+
+.subscribe-email {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.email {
+  width: 700px;
+  height: 64px;
+  border-radius: 8px;
+  background: #fff;
+  border: none;
+}
+
+input::placeholder {
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 16px;
+  font-weight: 400;
+}
+input:focus {
+  color: rgb(121, 121, 121);
+  margin-left: 8px;
+  border: none;
+}
+.email:hover {
+  border: none;
+}
+
+.submit:hover {
+  color: yellow;
+}
+.submit:active {
+  color: yellow;
+}
