--- a/assets/style.css
+++ b/assets/style.css
@@ -40,7 +40,11 @@
   background: #e55473;
   font-size: 20px;
 }
-
+.btn-primary:hover {
+  color: rgb(255, 255, 255);
+  background-color: red;
+  cursor: pointer;
+}
 .banner-image {
   width: 550px;
 }
@@ -114,6 +118,11 @@
   font-weight: 700;
   line-height: 35px;
   text-decoration-line: underline;
+  color: rgb(219, 70, 99);
+}
+.f-text:hover {
+  color: rgb(0, 0, 0);
+  cursor: pointer;
 }
 
 /* Benefit section start */
@@ -199,11 +208,14 @@
   background: rgba(39, 39, 39, 0.05);
   margin-top: 100px;
   background-image: url("./images/Rectangle\ 9.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .subscribe-email {
   text-align: center;
   margin-top: 20px;
+  padding-bottom: 80px;
 }
 
 .email {
@@ -228,9 +240,51 @@ input:focus {
   border: none;
 }
 
-.submit:hover {
-  color: yellow;
+/* Footer area start */
+
+footer {
+  background: #141414;
+  padding: 40px 0;
+  margin-top: 80px;
 }
-.submit:active {
-  color: yellow;
+
+.footer-flower {
+  color: #e55473;
+  font-size: 48px;
+  font-weight: 800;
+}
+.footer-shop {
+  color: #ffffff;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: normal;
+}
+.footer-description {
+  color: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.footer-copyright {
+  color: rgba(255, 255, 255, 0.4);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 120px;
+  padding-bottom: 20px;
+}
+
+#dev {
+  color: rgb(255, 241, 117);
+}
+
+.social-icons {
+  text-align: center;
+  margin: 10px;
+}
+
+.icon {
+  width: 150px;
+  height: 150px;
 }
